@@ -1,2 +1,0 @@
-If you have written a test module based on Test::Builder then
-Test::Tester allows you to test it with the minimum of effort.
